--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ sidebar-avatar: /img/mypic.JPG     # use absolute URL, seeing it's used in both 
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-# zhihu_username:     bu-tuo-de-tuo-yuan/activities
+zhihu_username:     ma-xiao-yu-10-51
 github_username:    derek1998
 # facebook_username:  profile.php?id=100010973168548
 # jianshu_username:   
-#twitter_username:   qiubaiying
+# twitter_username:   qiubaiying
 
 
 
