--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,8 @@ gems: [jekyll-paginate]
 markdown: kramdown
 highlighter: rouge
 kramdown:
-  input: Kramdown                            # use Github Flavored Markdown !important
+  input: GFM                            # use Github Flavored Markdown !important
+  syntax_highlighter: rouge
 
 
 
